--- a/app/src/main/res/layout/show_activity.xml
+++ b/app/src/main/res/layout/show_activity.xml
@@ -8,20 +8,11 @@
     tools:context=".ShowActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="371dp"
-        android:layout_height="652dp"
+        android:id="@+id/textViewShow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/btnCancel"
-        tools:layout_editor_absoluteX="20dp" />
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/textView"
-        android:text="Назад"
-        android:onClick="cancelActivity"
+        android:text="( ´･･)ﾉ(._.`)"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
